WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73210
Web Inspector: console evaluation doesn't work when navigating from a page with several frames to another one
https://bugs.webkit.org/show_bug.cgi?id=73210
Summary
Web Inspector: console evaluation doesn't work when navigating from a page wi...
Yury Semikhatsky
Reported
2011-11-28 05:48:08 PST
Web Inspector: console evaluation doesn't work when navigating from a page with several frames to another one. Steps to reproduce: 1. Open
http://lenta.ru
2. Navigate your browser to google.com 3. Type location in the console Result: Nothing happens.
Attachments
Patch
(7.82 KB, patch)
2011-11-28 07:11 PST
,
Pavel Feldman
yurys
: review+
webkit-ews
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2011-11-28 07:11:33 PST
Created
attachment 116755
[details]
Patch
Yury Semikhatsky
Comment 2
2011-11-28 07:16:15 PST
Comment on
attachment 116755
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=116755&action=review
> Source/WebCore/inspector/front-end/ResourceTreeModel.js:-451 > - frame._removeChildFrames();
This is called only in this file, let's keep it private.
Early Warning System Bot
Comment 3
2011-11-28 07:21:35 PST
Comment on
attachment 116755
[details]
Patch
Attachment 116755
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/10668731
Gyuyoung Kim
Comment 4
2011-11-28 07:26:04 PST
Comment on
attachment 116755
[details]
Patch
Attachment 116755
[details]
did not pass efl-ews (efl): Output:
http://queues.webkit.org/results/10675291
Pavel Feldman
Comment 5
2011-11-28 07:26:07 PST
Committed
r101260
: <
http://trac.webkit.org/changeset/101260
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug