Web Inspector: console evaluation doesn't work when navigating from a page with several frames to another one https://bugs.webkit.org/show_bug.cgi?id=73210

Reviewed by Yury Semikhatsky.

Source/WebCore:

Test: http/tests/inspector/resource-tree/resource-tree-events.html

* inspector/Inspector.json:
* inspector/front-end/ResourceTreeModel.js:
(WebInspector.ResourceTreeModel.prototype._frameDetached):
(WebInspector.ResourceTreeFrame.prototype.navigate):
(WebInspector.ResourceTreeFrame.prototype.removeChildFrame):
(WebInspector.ResourceTreeFrame.prototype.removeChildFrames):

LayoutTests:

* http/tests/inspector/resource-tree/resource-tree-events-expected.txt: Added.
* http/tests/inspector/resource-tree/resource-tree-events.html: Added.

Canonical link: https://commits.webkit.org/89741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101260 268f45cc-cd09-0410-ab3c-d52691b4dbfc